- Add scoreboard criteria for tracking various things:
  flan:total_claimblocks: Tracks the total claim blocks of players (normal and additional claimblocks)
  flan:used_claimblocks: Tracks the used claimblocks of players
  flan:free_claimblocks: Tracks the amount a player can use to claim
  flan:claim_number: Tracks the number of claims a player has in total

Flan 1.5.2
======================
- Add left click blocks check cause some blocks react to that (dragon egg)
- Fix out of memory error when updating from 1.4.x to 1.5+
- Add INTERACTBLOCK permission as a generic permission for block interaction.
  All blocks not covered by other permissions fall under this.
- Fix lilypad placing ignore permission
- Add FROSTWALKER permission

Flan 1.5.1
======================
- Invert ANIMALSPAWN in global perms if its not defined. fix animals not spawning outside claims
- Fix mobs ignoring permission and not spawning in claims

Flan 1.5.0
======================
- Fix some items checking for wrong position and thus are able to interact in claims
- Fix enderpearl phasing through blocks
- Add claim homes set via /flan setHome in a claim to the players position.
  The claim permission to allow others do that too is EDITCLAIM
- Add /flan teleport to tp to a claims home.
  Default global value is ALLFALSE so disabled.
- Add NOHUNGER permission: Disables hunger in claims
  Default global value is ALLFALSE so disabled.
- Fix resizing claims of other players not using their claim blocks
- Add ability to add potion effects to claims.
  That claim will then apply that effect to any player inside the claim
  Specify potions with <id;amplifier>
- Add EDITPOTIONS permission for that. There are no limits to potion effects so
  this should be admin reserved only.
  Default global value is ALLFALSE so disabled for that reason
- Add claim deletion for inactive players. Added config for that are:
  inactivityTimeDays: How long in days a player has to be offline for it to check the player